chore: correct value in extra.pimcore.bundles

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         },
         "pimcore": {
             "bundles": [
-                "GanderTools\\PimcoreToolbox"
+                "GanderTools\\PimcoreToolbox\\PimcoreToolboxBundle"
             ]
         }
     },
