--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "extra": {
         "branch-alias": {
-            "master": "1.0.x-dev"
+            "dev-master": "0.1.x-dev"
         },
         "pimcore": {
             "bundles": [
